[package]
name = "xianniu-auto-pause"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde_json = "1.0"
serde = { version = "1", features = ["derive"] } 
anyhow = "1.0"
reqwest = { version = "0.11", features = ["json"] }
md-5 = "0.10.1"
chrono = "0.4.21"
crossbeam = "0.8.2"
crossbeam-channel = "0.5"
once_cell = "1.10.0"